--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,73 +9,12 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sk.nai.kdictionary.MainActivity">
+    tools:context="com.sk.nai.kdictionary.activity.MainActivity">
 
-    <EditText
-        android:id="@+id/edit_text1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:hint="Input Value1"
-        android:inputType="numberSigned" />
-
-    <EditText
-        android:id="@+id/edit_text2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:hint="Input Value2"
-        android:inputType="numberSigned" />
-
-    <TextView
-        android:id="@+id/text_view"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:freezesText="true"
-        android:textSize="20sp" />
-
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <Button
-            android:layout_weight="1"
-            android:id="@+id/button_add"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="+" />
-
-        <Button
-            android:layout_weight="1"
-            android:id="@+id/button_subtract"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="-" />
-
-        <Button
-            android:layout_weight="1"
-            android:id="@+id/button_multiply"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="*" />
-
-        <Button
-            android:layout_weight="1"
-            android:id="@+id/button_divide"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="/" />
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/button_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="next"
-        android:textSize="20sp" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
 
 </LinearLayout>
